...
    Button(
      onClick = onStartReactNativeFragment,
      modifier = Modifier
        .fillMaxWidth()
        .padding(vertical = 8.dp)
    ) {
      Text("Navigate to React Native Fragment with Compose")
    }

    Button(
      onClick = {
        onStartReactNativeFragmentActivity()
      }
    ) {
      Text("Navigate to React Native Fragment Activity")
    }
  }
}

@Composable
fun ReactNativeScreen() {
...
