...
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="c1z-PC-pPF">
                                <rect key="frame" x="10" y="292.5" width="355" height="82"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="React Native Brownfield" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B5S-4T-aLa">
                                        <rect key="frame" x="3" y="0.0" width="349" height="36"/>
                                        <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="30"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QqJ-lk-RpM">
                                        <rect key="frame" x="67" y="46" width="221" height="36"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                        <state key="normal" title="Push React Native screen">
                                            <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                        </state>
                                        <connections>
                                            <action selector="openReactNative:" destination="BYZ-38-t0r" eventType="touchUpInside" id="y3i-ZA-FzQ"/>
                                        </connections>
                                    </button>
...
